# completeq-rs

./: Cargo.toml  README.md
src/: channel.rs  error.rs  lib.rs  oneshot.rs  result.rs  timer.rs  user_event.rs
src/channel/: inner.rs  receiver.rs  sender.rs
src/oneshot/: inner.rs  receiver.rs  sender.rs
