[package]
name = "completeq-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
log = "0.4.16"
async-timer = {git="https://github.com/AgoraCyber/async-timer.git"}
futures = {version = "0.3.25"}

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
anyhow = "1.0.68"